--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,7 +3,9 @@ steps:
     command: "npm install"
 
   - label: "Run Linter"
-    command: "./bin/test.sh"
+    command: 
+      - "./bin/test.sh"
+      - "node -v"
 
   - label: "Run Unit Tests"
     command: "npm run test"
