--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,8 +4,8 @@ steps:
 
   - label: "Run Linter"
     command: 
-      - "./bin/test.sh"
-      - "node -v"
+      - ./bin/test.sh
+      - node -v
 
   - label: "Run Unit Tests"
     command: "npm run test"
