--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,7 +10,7 @@ steps:
     command: "node -v"
 
   - label: "Build Production"
-    command: "npm build --prod"
+    command: "npm run build --prod"
 
   - block: "Deploy"
     prompt: "Deploy to production?"
